tests/machine/x/fs/len_map.fs
// Generated by Mochi compiler v0.10.27 on 2025-07-17T07:47:31Z
open System

printfn "%d" (List.length System.Collections.Generic.Dictionary<string,int>(dict [("a", 1); ("b", 2)]))
